Fixes iframe heights on small screens

--- a/app/_scss/pages/_blog.scss
+++ b/app/_scss/pages/_blog.scss
@@ -186,7 +186,6 @@
 
 			.video {
 				width: 100%;
-				padding-top: 55.55%;
 			}
 		}
 	}
